[gd_scene load_steps=3 format=2]

[ext_resource path="res://src/Objects/GroundTrap/GroundTrap.gd" type="Script" id=1]
[ext_resource path="res://src/Art/trap_1.png" type="Texture" id=2]

[node name="GroundTrap" type="Area2D"]

input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
collision_layer = 0
collision_mask = 3
audio_bus_override = false
audio_bus_name = "Master"
script = ExtResource( 1 )
_sections_unfolded = [ "Collision" ]
damage = 0.01
effect_area = Vector2( 16, 16 )

[node name="ColorRect" type="TextureRect" parent="." index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = -32.0
margin_top = -32.0
margin_right = 32.0
margin_bottom = 32.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
texture = ExtResource( 2 )
expand = true
stretch_mode = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="." index="1"]

[connection signal="area_entered" from="." to="." method="_on_GroundTrap_area_entered"]

[connection signal="area_exited" from="." to="." method="_on_GroundTrap_area_exited"]


